--- a/game.css
+++ b/game.css
@@ -1,4 +1,5 @@
-.c:hover { /* Clickable */
+/* Clickable */
+.c:hover {
     cursor: pointer;
 }
 
@@ -14,12 +15,14 @@ button:hover {
     display: block;
 }
 
+/* Screen */
 .sc {
     text-align: center;
     margin: auto;
     display: none;
 }
 
+/* Outer User Input */
 .oui {
     outline: 1px solid black;
     padding: 10px;
@@ -27,6 +30,7 @@ button:hover {
     background-color: white;
 }
 
+/* User Input */
 .ui {
     outline: 1px solid black;
     display: inline-block;
@@ -34,6 +38,7 @@ button:hover {
     margin: 5px;
 }
 
+/* Hidden */
 .hidden {
     display: none;
 }
